<resources>
    <string name="app_name">SE2 Einzelbeispiel</string>
    <string name="insertText">Gib deine Matrikelnummer ein:</string>
    <string name="insert_hint">Matrikelnummer...</string>
    <string name="send">Abschicken</string>
    <string name="networktest">NetworkTest</string>
    <string name="tobinary">ToBinary</string>
    <string name="binary_desc">Binäre Darstellung der Quersumme:</string>
    <string name="compute">Berechnen</string>
</resources>
