<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toBinary_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toBinary_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorUniversitySecondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/toBinary_textView_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertText"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toBinary_toolbar" />

    <EditText
        android:id="@+id/toBinary_editText_userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:backgroundTint="@color/colorUniversitySecondary"
        android:hint="@string/insert_hint"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/toBinary_textView_insert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/toBinary_textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/binary_desc"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/toBinary_editText_userInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/toBinary_textView_convertedNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/toBinary_textView_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/toBinary_button_compute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:textColor="@color/white"
        android:background="@color/colorUniversitySecondary"
        android:layout_marginBottom="80dp"
        android:onClick="onClickComputeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>